adpated utils.py, implemented and tested cost and grad function

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 99,
    "id": "5378117c",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split \n",
-    "\n",
+    "import utils\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
    ]
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 100,
    "id": "2cfc3c66",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 101,
    "id": "355c29c1",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 102,
    "id": "5a473d06",
    "metadata": {
     "scrolled": true
@@ -79,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "2f1c9c70",
+   "execution_count": 103,
+   "id": "1c0eaa03",
    "metadata": {
     "scrolled": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc95841",
+   "id": "e6f3344b",
    "metadata": {},
    "source": [
     "## Checking if data is biased \n",
@@ -113,25 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "97f7a95c",
+   "execution_count": 155,
+   "id": "4c56eab1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7841\n"
+      "Total number of samples with income above 50K:\t7841\n",
+      "Total number of samples :\t\t\t32561\n"
      ]
     }
    ],
    "source": [
-    "print(y[y==1].size)"
+    "large_income=y[y==1].size\n",
+    "print('Total number of samples with income above 50K:\\t%d' % large_income)\n",
+    "print('Total number of samples :\\t\\t\\t%d' % y.size)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b3917a83",
+   "id": "14046f27",
    "metadata": {},
    "source": [
     "## Splitting Data"
@@ -139,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "e502c35c",
+   "execution_count": 105,
+   "id": "0d40a0e5",
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8619c79a",
+   "id": "8cd131d1",
    "metadata": {},
    "source": [
     "## Model representation\n",
@@ -205,8 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "df38b60b",
+   "execution_count": 106,
+   "id": "5abfed25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7538cfb",
+   "id": "98b5235a",
    "metadata": {},
    "source": [
     "## Random Initialization of parameters"
@@ -225,11 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "e0efb481",
+   "execution_count": 107,
+   "id": "09162956",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ====================== MY CODE HERE ASSIG.4 ======================\n",
+    "\n",
     "def randInitializeWeights(L_in, L_out, epsilon_init=0.12):\n",
     "    # Assignment 4\n",
     "    W = np.zeros((L_out, 1 + L_in))\n",
@@ -241,19 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "3247f2e3",
+   "execution_count": 108,
+   "id": "debd4385",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing Neural Network Parameters ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# ====================== MY CODE HERE ASSIG.4 ======================\n",
+    "\n",
     "initial_Theta1 = randInitializeWeights(input_layer_size, hidden_layer_size)\n",
     "initial_Theta2 = randInitializeWeights(hidden_layer_size, num_labels)\n",
     "# Unroll parameters\n",
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ec388c0",
+   "id": "c52b9d0e",
    "metadata": {},
    "source": [
     "## Feedforward and cost function"
@@ -270,33 +269,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "7ae7cbb3",
+   "execution_count": 143,
+   "id": "b17f2064",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ====================== MY CODE HERE ASSIG.4 ======================\n",
     "def matrix_of_y(y,num_labels):\n",
-    "    \"\"\"\n",
-    "    parameters\n",
-    "    y : array_like\n",
-    "            Dataset labels. A vector of shape (m,).\n",
-    "    returns\n",
-    "    y_v: matrix_like\n",
-    "            Dataset labels in vector shape\n",
-    "    \"\"\"\n",
-    "    y_v = np.zeros([y.size,num_labels])\n",
-    "    for r in range (y_v.shape[0]):\n",
-    "        y_v[r,y[r]] = 1\n",
-    "    return  y_v  "
+    "    n = y.shape[0]\n",
+    "    y_v = np.zeros([n,num_labels])\n",
+    "    if(y_v.shape[1]==1):\n",
+    "        return y\n",
+    "    else:\n",
+    "        for r in range (n):\n",
+    "            y_v[r,y[r]] = 1\n",
+    "        return  y_v  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "220011ea",
+   "execution_count": 144,
+   "id": "5da385c0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ====================== MY CODE HERE ASSIG.3 ======================\n",
+    "def sigmoid(z):\n",
+    "    z = np.array(z)\n",
+    "    g = np.reciprocal((np.exp(z*-1))+1)\n",
+    "    \n",
+    "    return g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "c7fe4e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================== MY CODE HERE ASSIG.4 ======================\n",
+    "def sigmoidGradient(z):\n",
+    "    \n",
+    "    g = np.zeros(z.shape)\n",
+    "    g_t = sigmoid(z)\n",
+    "    g= g_t*(1-g_t)\n",
+    "    \n",
+    "    return g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "0f3572e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================== MY CODE HERE ASSIG.4 ADAPTED======================\n",
     "def nnCostFunction(nn_params,\n",
     "                   input_layer_size,\n",
     "                   hidden_layer_size,\n",
@@ -314,23 +343,21 @@
     "    Theta1_grad = np.zeros(Theta1.shape)\n",
     "    Theta2_grad = np.zeros(Theta2.shape)\n",
     "\n",
+    "    \n",
     "    # ====================== MY CODE HERE ASSIG.4======================\n",
     "    #Calculate hypothesis \n",
     "    a1 = np.concatenate([np.ones((m, 1)), X], axis=1) # add x0 = 1\n",
     "    z2 = np.matmul(Theta1,a1.T)\n",
-    "    a2 = utils.sigmoid(z2)\n",
+    "    a2 = sigmoid(z2)\n",
     "    a2 = np.concatenate([np.ones((1, a2.shape[1])), a2], axis=0)\n",
-    "    z3= np.matmul(Theta2,(a2))\n",
-    "    a3 = utils.sigmoid(z3)\n",
+    "    z3 = np.matmul(Theta2,(a2))\n",
+    "    a3 = sigmoid(z3)\n",
     "    hyp = a3.T\n",
     "    y_v = matrix_of_y(y,num_labels)\n",
     "\n",
     "    #Calculate cost function. \n",
-    "    J_i= np.zeros(m)\n",
-    "    for i in range (m):    \n",
-    "        J_i[i] = -(1/m)*(y_v[i]@(np.log(hyp[i]))+(1-y_v[i])@(np.log(1-hyp[i]))) \n",
-    "    J = np.sum(J_i)\n",
-    "    \n",
+    "    J = (-1 / m) * np.sum((np.log(hyp) * y_v) + np.log(1 - hyp) * (1 - y_v)) \n",
+    "\n",
     "    #Calculate regularized cost function.\n",
     "    temp_theta1 = Theta1[:,1:]\n",
     "    temp_theta2 = Theta2[:,1:]\n",
@@ -353,27 +380,94 @@
     "      \n",
     "    grad = np.concatenate([Theta1_grad.ravel(), Theta2_grad.ravel()])\n",
     "    \n",
-    "#     print(\"----######-------\")\n",
-    "#     print()\n",
-    "#     print(\"----X_test-------\")\n",
-    "#     print(X_test.shape)\n",
-    "\n",
-    "    return J_reg, grad\n",
-    "\n",
-    "\n"
+    "    return J_reg, grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aba86d2",
+   "metadata": {},
+   "source": [
+    "### Test Gradient "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "d8c6dba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.00927825 -0.00927825]\n",
+      " [-0.00559136 -0.00559136]\n",
+      " [-0.02017486 -0.02017486]\n",
+      " [-0.00585433 -0.00585433]\n",
+      " [ 0.00889912  0.00889912]\n",
+      " [ 0.01315402  0.01315402]\n",
+      " [-0.01049831 -0.01049831]\n",
+      " [-0.01910997 -0.01910997]\n",
+      " [-0.00836011 -0.00836011]\n",
+      " [ 0.01976123  0.01976123]\n",
+      " [ 0.00811587  0.00811587]\n",
+      " [-0.01515689 -0.01515689]\n",
+      " [ 0.00762814  0.00762814]\n",
+      " [ 0.00827936  0.00827936]\n",
+      " [ 0.02014747  0.02014747]\n",
+      " [ 0.00315079  0.00315079]\n",
+      " [-0.00674798 -0.00674798]\n",
+      " [-0.0109273  -0.0109273 ]\n",
+      " [ 0.01262954  0.01262954]\n",
+      " [ 0.01809234  0.01809234]\n",
+      " [ 0.31454497  0.31454497]\n",
+      " [ 0.14895477  0.14895477]\n",
+      " [ 0.17770766  0.17770766]\n",
+      " [ 0.14745891  0.14745891]\n",
+      " [ 0.15953087  0.15953087]\n",
+      " [ 0.14381027  0.14381027]\n",
+      " [ 0.11105659  0.11105659]\n",
+      " [ 0.03839516  0.03839516]\n",
+      " [ 0.0775739   0.0775739 ]\n",
+      " [ 0.03592373  0.03592373]\n",
+      " [ 0.07350885  0.07350885]\n",
+      " [ 0.03392626  0.03392626]\n",
+      " [ 0.0974007   0.0974007 ]\n",
+      " [ 0.04486928  0.04486928]\n",
+      " [ 0.05899539  0.05899539]\n",
+      " [ 0.03843063  0.03843063]\n",
+      " [ 0.06015138  0.06015138]\n",
+      " [ 0.03153997  0.03153997]]\n",
+      "The above two columns you get should be very similar.\n",
+      "(Left-Your Numerical Gradient, Right-Analytical Gradient)\n",
+      "\n",
+      "If your backpropagation implementation is correct, then \n",
+      "the relative difference will be small (less than 1e-9). \n",
+      "Relative Difference: 2.32956e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_=1\n",
+    "utils.checkNNGradients(nnCostFunction, lambda_)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7ef0ad5",
+   "metadata": {},
+   "source": [
+    "## Learning parameters using `scipy.optimize.minimize`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f7c739c",
+   "id": "79893533",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "J, _ = nnCostFunction(nn_params, input_layer_size, hidden_layer_size,\n",
-    "                   num_labels, X, y, lambda_)\n",
-    "print('Cost at parameters (randomly initialize): %.6f ' % J)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
