--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 183,
    "id": "5378117c",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split \n",
     "import utils\n",
+    "# Optimization module in scipy\n",
+    "from scipy import optimize\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
    ]
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 184,
    "id": "2cfc3c66",
    "metadata": {},
    "outputs": [],
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 185,
    "id": "355c29c1",
    "metadata": {},
    "outputs": [],
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 186,
    "id": "5a473d06",
    "metadata": {
     "scrolled": true
@@ -79,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "1c0eaa03",
+   "execution_count": 187,
+   "id": "928867ef",
    "metadata": {
     "scrolled": true
    },
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f3344b",
+   "id": "e981c1e8",
    "metadata": {},
    "source": [
     "## Checking if data is biased \n",
@@ -113,8 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "4c56eab1",
+   "execution_count": 188,
+   "id": "e554ce7e",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14046f27",
+   "id": "2bc96b67",
    "metadata": {},
    "source": [
     "## Splitting Data"
@@ -142,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "0d40a0e5",
+   "execution_count": 189,
+   "id": "f7873e63",
    "metadata": {
     "scrolled": true
    },
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd131d1",
+   "id": "907dd3a4",
    "metadata": {},
    "source": [
     "## Model representation\n",
@@ -208,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "5abfed25",
+   "execution_count": 190,
+   "id": "f663227a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b5235a",
+   "id": "36edde9e",
    "metadata": {},
    "source": [
     "## Random Initialization of parameters"
@@ -228,8 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "09162956",
+   "execution_count": 191,
+   "id": "e981e54f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "debd4385",
+   "execution_count": 192,
+   "id": "81d9fbcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c52b9d0e",
+   "id": "8d4d881c",
    "metadata": {},
    "source": [
     "## Feedforward and cost function"
@@ -269,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "b17f2064",
+   "execution_count": 193,
+   "id": "01e094a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,8 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "5da385c0",
+   "execution_count": 194,
+   "id": "b6335aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,8 +305,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "c7fe4e8f",
+   "execution_count": 195,
+   "id": "61f04420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,8 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "0f3572e2",
+   "execution_count": 196,
+   "id": "a856ae04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +372,6 @@
     "\n",
     "    Delta1 = delta_2.T.dot(a1)\n",
     "    Delta2 = delta_3.T.dot(a2.T)\n",
-    "    \n",
     "    # Add regularization to gradient\n",
     "    Theta1_grad = (1 / m) * Delta1\n",
     "    Theta1_grad[:, 1:] = Theta1_grad[:, 1:] + (lambda_ / m) * Theta1[:, 1:]\n",
@@ -385,16 +386,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aba86d2",
+   "id": "904be1b5",
    "metadata": {},
    "source": [
-    "### Test Gradient "
+    "### Test Gradient and Cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "d8c6dba2",
+   "execution_count": 201,
+   "id": "9e3bea5f",
    "metadata": {},
    "outputs": [
     {
@@ -444,27 +445,99 @@
       "\n",
       "If your backpropagation implementation is correct, then \n",
       "the relative difference will be small (less than 1e-9). \n",
-      "Relative Difference: 2.32956e-11\n"
+      "Relative Difference: 2.32956e-11\n",
+      "\n",
+      "\n",
+      "Cost at (fixed) debugging parameters (w/ lambda = 1.000000): 0.780513 \n"
      ]
     }
    ],
    "source": [
     "lambda_=1\n",
-    "utils.checkNNGradients(nnCostFunction, lambda_)\n"
+    "utils.checkNNGradients(nnCostFunction, lambda_)\n",
+    "debug_J, _  = nnCostFunction(initial_nn_params, input_layer_size,\n",
+    "                          hidden_layer_size, num_labels, X, y, lambda_)\n",
+    "\n",
+    "print('\\n\\nCost at (fixed) debugging parameters (w/ lambda = %f): %f ' % (lambda_, debug_J))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7ef0ad5",
+   "id": "c106ef59",
    "metadata": {},
    "source": [
-    "## Learning parameters using `scipy.optimize.minimize`"
+    "### Learning parameters using `scipy.optimize.minimize`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "1db701f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ====================== MY CODE HERE ASSIG.4 ADAPTED======================\n",
+    "#  value to see how more training helps.\n",
+    "options= {'maxiter': 100}\n",
+    "\n",
+    "#  You should also try different values of lambda\n",
+    "lambda_ = 0.1\n",
+    "\n",
+    "# Create \"short hand\" for the cost function to be minimized\n",
+    "costFunction = lambda p: nnCostFunction(p, input_layer_size,\n",
+    "                                        hidden_layer_size,\n",
+    "                                        num_labels, X, y, lambda_)\n",
+    "\n",
+    "# Now, costFunction is a function that takes in only one argument\n",
+    "# (the neural network parameters)\n",
+    "res = optimize.minimize(costFunction,\n",
+    "                        initial_nn_params,\n",
+    "                        jac=True,\n",
+    "                        method='TNC',\n",
+    "                        options=options)\n",
+    "\n",
+    "# get the solution of the optimization\n",
+    "nn_params = res.x\n",
+    "        \n",
+    "# Obtain Theta1 and Theta2 back from nn_params\n",
+    "Theta1 = np.reshape(nn_params[:hidden_layer_size * (input_layer_size + 1)],\n",
+    "                    (hidden_layer_size, (input_layer_size + 1)))\n",
+    "\n",
+    "Theta2 = np.reshape(nn_params[(hidden_layer_size * (input_layer_size + 1)):],\n",
+    "                    (num_labels, (hidden_layer_size + 1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3db1955a",
+   "metadata": {},
+   "source": [
+    "## Test data with Validation set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "f0f67df9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Set Accuracy: 75.919044\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = utils.predict(Theta1, Theta2, Xval)\n",
+    "print('Training Set Accuracy: %f' % (np.mean(pred == y) * 100))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79893533",
+   "id": "dc67f451",
    "metadata": {},
    "outputs": [],
    "source": []
