restructuring neural network

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 183,
    "id": "5378117c",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "import utils\n",
     "# Optimization module in scipy\n",
     "from scipy import optimize\n",
+    "from sklearn import metrics\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
    ]
@@ -25,7 +26,17 @@
    "source": [
     "# Clasification of adults that have an income larger than 50K\n",
     "\n",
-    "# Using a Neural Network"
+    "# Using a Neural Network\n",
+    "------------------------------------------\n",
+    "*******************************************"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5162731a",
+   "metadata": {},
+   "source": [
+    "# Preprocesing"
    ]
   },
   {
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 184,
    "id": "2cfc3c66",
    "metadata": {},
    "outputs": [],
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 185,
    "id": "355c29c1",
    "metadata": {},
    "outputs": [],
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 186,
    "id": "5a473d06",
    "metadata": {
     "scrolled": true
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 187,
    "id": "4bd04a20",
    "metadata": {
     "scrolled": true
@@ -104,47 +115,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12075ad1",
-   "metadata": {},
-   "source": [
-    "## Checking if data is biased \n",
-    "\n",
-    "The data is biased \n",
-    "Only 25% of the data erans more than 50K "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "351d8010",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of samples with income above 50K:\t7841\n",
-      "Total number of samples :\t\t\t32561\n"
-     ]
-    }
-   ],
-   "source": [
-    "large_income=y[y==1].size\n",
-    "print('Total number of samples with income above 50K:\\t%d' % large_income)\n",
-    "print('Total number of samples :\\t\\t\\t%d' % y.size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "12eed7a2",
    "metadata": {},
    "source": [
-    "## Splitting Data"
+    "### Splitting Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 188,
    "id": "2673aa01",
    "metadata": {
     "scrolled": true
@@ -195,42 +174,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f47f3d70",
+   "id": "e4efad2f",
    "metadata": {},
    "source": [
-    "## Model representation\n",
-    "\n",
-    "Our neural network is shown in the following figure.\n",
-    "\n",
-    "It has 3 layers - an input layer, a hidden layer and an output layer.\n",
-    "- Input layer has 88 layer units.\n",
-    "- Hidden layer 88 layer units.\n",
-    "- Output layer has 2 layer units. \n"
+    "# Utility functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "dfbbe904",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_layer_size  = Xtrain.shape[1]  \n",
-    "hidden_layer_size = input_layer_size   \n",
-    "num_labels = 1          # where 1 means (income => 50k)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "123194b2",
-   "metadata": {},
-   "source": [
-    "## Random Initialization of parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 189,
    "id": "d56c6e0f",
    "metadata": {},
    "outputs": [],
@@ -248,30 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "80f61479",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ====================== MY CODE HERE ASSIG.4 ======================\n",
-    "\n",
-    "initial_Theta1 = randInitializeWeights(input_layer_size, hidden_layer_size)\n",
-    "initial_Theta2 = randInitializeWeights(hidden_layer_size, num_labels)\n",
-    "# Unroll parameters\n",
-    "initial_nn_params = np.concatenate([initial_Theta1.ravel(), initial_Theta2.ravel()], axis=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56f2986b",
-   "metadata": {},
-   "source": [
-    "## Feedforward and cost function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 190,
    "id": "4afc75de",
    "metadata": {},
    "outputs": [],
@@ -290,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 191,
    "id": "256ea39f",
    "metadata": {},
    "outputs": [],
@@ -305,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 192,
    "id": "e5e77018",
    "metadata": {},
    "outputs": [],
@@ -322,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 193,
    "id": "a06e74ff",
    "metadata": {},
    "outputs": [],
@@ -354,11 +283,12 @@
     "    a2 = np.concatenate([np.ones((1, a2.shape[1])), a2], axis=0)\n",
     "    z3 = np.matmul(Theta2,(a2))\n",
     "    a3 = sigmoid(z3)\n",
+    "    almost_zero=1e-10\n",
     "    hyp = a3.T\n",
     "    y_v = matrix_of_y(y,num_labels)\n",
     "\n",
     "    #Calculate cost function. \n",
-    "    J = (-1 / m) * np.sum((np.log(hyp) * y_v) + np.log(1 - hyp) * (1 - y_v)) \n",
+    "    J = (-1 / m) * np.sum((np.log(hyp+almost_zero) * y_v) + np.log(1 - hyp+almost_zero) * (1 - y_v)) \n",
     "\n",
     "    #Calculate regularized cost function.\n",
     "    temp_theta1 = Theta1[:,1:]\n",
@@ -367,7 +297,7 @@
     "    J_reg_factor = (lambda_/(2*m))*(np.sum(np.square(temp_theta1))+np.sum(np.square(temp_theta2)))\n",
     "    J_reg = J+J_reg_factor\n",
     "    \n",
-    "    delta_3 = hyp - y_v\n",
+    "    delta_3 = hyp - y_v+almost_zero\n",
     "    delta_2 = delta_3.dot(Theta2)[:, 1:] * sigmoidGradient(a1.dot(Theta1.T))\n",
     "\n",
     "    Delta1 = delta_2.T.dot(a1)\n",
@@ -385,126 +315,179 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "90d27ccf",
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "80f61479",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Test Gradient and Cost"
+    "# ====================== MY CODE HERE ASSIG.4 ======================\n",
+    "def randomInititalWeights(input_layer_size, hidden_layer_size,num_labels):\n",
+    "    initial_Theta1 = randInitializeWeights(input_layer_size, hidden_layer_size)\n",
+    "    initial_Theta2 = randInitializeWeights(hidden_layer_size, num_labels)\n",
+    "    # Unroll parameters\n",
+    "    initial_nn_params = np.concatenate([initial_Theta1.ravel(), initial_Theta2.ravel()], axis=0)\n",
+    "    return initial_nn_params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "230cd238",
+   "execution_count": 195,
+   "id": "b5ee33ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fowardPropagation(inputSet, theta1_input,theta2_input ):\n",
+    "    m= inputSet[:,0].size\n",
+    "    a1 = np.concatenate([np.ones((m, 1)), inputSet], axis=1) # add x0 = 1\n",
+    "    z2 = np.matmul(theta1_input,a1.T)\n",
+    "    a2 = sigmoid(z2)\n",
+    "    a2 = np.concatenate([np.ones((1, a2.shape[1])), a2], axis=0)\n",
+    "    z3 = np.matmul(theta2_input,(a2))\n",
+    "    a3 = sigmoid(z3)\n",
+    "    hyp = a3.T\n",
+    "    return hyp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "35368235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dispayPerformance(inputSetX, inputSetY,theta1_input,theta2_input,thresh):\n",
+    "    hyp_out = fowardPropagation(inputSetX,Theta1_train,Theta2_train)\n",
+    "    \n",
+    "    hyp_= [0 if value < thresh else 1 for value in hyp_out]\n",
+    "    accuracy_score= metrics.accuracy_score (inputSetY, hyp_)\n",
+    "    p_score = metrics.precision_score(inputSetY, hyp_)\n",
+    "    r_score = metrics.recall_score(inputSetY, hyp_) \n",
+    "    f_score = metrics.f1_score(inputSetY, hyp_) \n",
+    "\n",
+    "#     print(accuracy_score)\n",
+    "#     print(p_score)\n",
+    "#     print(r_score)\n",
+    "#     print(f_score)\n",
+    "    return accuracy_score, f_score\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6d63bf4",
+   "metadata": {},
+   "source": [
+    "# Pre-Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12075ad1",
+   "metadata": {},
+   "source": [
+    "### Checking if data is biased \n",
+    "\n",
+    "The data is biased \n",
+    "Only 25% of the data erans more than 50K "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "351d8010",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.00927825 -0.00927825]\n",
-      " [-0.00559136 -0.00559136]\n",
-      " [-0.02017486 -0.02017486]\n",
-      " [-0.00585433 -0.00585433]\n",
-      " [ 0.00889912  0.00889912]\n",
-      " [ 0.01315402  0.01315402]\n",
-      " [-0.01049831 -0.01049831]\n",
-      " [-0.01910997 -0.01910997]\n",
-      " [-0.00836011 -0.00836011]\n",
-      " [ 0.01976123  0.01976123]\n",
-      " [ 0.00811587  0.00811587]\n",
-      " [-0.01515689 -0.01515689]\n",
-      " [ 0.00762814  0.00762814]\n",
-      " [ 0.00827936  0.00827936]\n",
-      " [ 0.02014747  0.02014747]\n",
-      " [ 0.00315079  0.00315079]\n",
-      " [-0.00674798 -0.00674798]\n",
-      " [-0.0109273  -0.0109273 ]\n",
-      " [ 0.01262954  0.01262954]\n",
-      " [ 0.01809234  0.01809234]\n",
-      " [ 0.31454497  0.31454497]\n",
-      " [ 0.14895477  0.14895477]\n",
-      " [ 0.17770766  0.17770766]\n",
-      " [ 0.14745891  0.14745891]\n",
-      " [ 0.15953087  0.15953087]\n",
-      " [ 0.14381027  0.14381027]\n",
-      " [ 0.11105659  0.11105659]\n",
-      " [ 0.03839516  0.03839516]\n",
-      " [ 0.0775739   0.0775739 ]\n",
-      " [ 0.03592373  0.03592373]\n",
-      " [ 0.07350885  0.07350885]\n",
-      " [ 0.03392626  0.03392626]\n",
-      " [ 0.0974007   0.0974007 ]\n",
-      " [ 0.04486928  0.04486928]\n",
-      " [ 0.05899539  0.05899539]\n",
-      " [ 0.03843063  0.03843063]\n",
-      " [ 0.06015138  0.06015138]\n",
-      " [ 0.03153997  0.03153997]]\n",
-      "The above two columns you get should be very similar.\n",
-      "(Left-Your Numerical Gradient, Right-Analytical Gradient)\n",
-      "\n",
-      "If your backpropagation implementation is correct, then \n",
-      "the relative difference will be small (less than 1e-9). \n",
-      "Relative Difference: 2.37486e-11\n",
-      "\n",
-      "\n",
-      "Cost at (fixed) debugging parameters (w/ lambda = 1.000000): 0.780513 \n"
+      "Total number of samples with income above 50K:\t7841\n",
+      "Total number of samples :\t\t\t32561\n"
      ]
     }
    ],
    "source": [
-    "lambda_=1\n",
-    "utils.checkNNGradients(nnCostFunction, lambda_)\n",
-    "debug_J, _  = nnCostFunction(initial_nn_params, input_layer_size,\n",
-    "                          hidden_layer_size, num_labels, X, y, lambda_)\n",
-    "\n",
-    "print('\\n\\nCost at (fixed) debugging parameters (w/ lambda = %f): %f ' % (lambda_, debug_J))"
+    "large_income=y[y==1].size\n",
+    "print('Total number of samples with income above 50K:\\t%d' % large_income)\n",
+    "print('Total number of samples :\\t\\t\\t%d' % y.size)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f7c1c8bc",
+   "id": "f47f3d70",
    "metadata": {},
    "source": [
-    "### Learning parameters using `scipy.optimize.minimize`"
+    "### Model representation\n",
+    "\n",
+    "Our neural network is shown in the following figure.\n",
+    "\n",
+    "It has 3 layers - an input layer, a hidden layer and an output layer.\n",
+    "- Input layer has 88 layer units.\n",
+    "- Hidden layer X layer units.\n",
+    "- Output layer has 2 layer units. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a831253f",
+   "execution_count": 198,
+   "id": "dfbbe904",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ====================== MY CODE HERE ASSIG.4 ADAPTED======================\n",
-    "#  value to see how more training helps.\n",
-    "options= {'maxiter': 100}\n",
-    "\n",
-    "#  You should also try different values of lambda\n",
-    "lambda_ = 0.1\n",
-    "\n",
-    "# Create \"short hand\" for the cost function to be minimized\n",
-    "costFunction = lambda p: nnCostFunction(p, input_layer_size,\n",
+    "input_layer_size  = Xtrain.shape[1]    \n",
+    "num_labels = 1          # where 1 means (income => 50k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "123194b2",
+   "metadata": {},
+   "source": [
+    "# Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d575655",
+   "metadata": {},
+   "source": [
+    " ### Calculate optimal weights for neural network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "f3a4c271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def neuralNetwork(training_steps,lambda_in,hidden_layer_size):\n",
+    "    options= {'maxiter': training_steps}\n",
+    "    lambda_ = lambda_in\n",
+    "    \n",
+    "    \n",
+    "    costFunction = lambda p: nnCostFunction(p, input_layer_size,\n",
     "                                        hidden_layer_size,\n",
-    "                                        num_labels, X, y, lambda_)\n",
+    "                                        num_labels, Xtrain, ytrain, lambda_)\n",
+    "    \n",
+    "    initial_rand_params= randomInititalWeights(input_layer_size,hidden_layer_size,num_labels)\n",
+    "    \n",
+    "    res = optimize.minimize(costFunction,\n",
+    "                            initial_rand_params,\n",
+    "                            jac=True,\n",
+    "                            method='TNC',\n",
+    "                            options=options)\n",
+    "    # get the solution of the optimization\n",
+    "    nn_params = res.x\n",
+    "    # Obtain Theta1 and Theta2 back from nn_params\n",
+    "    Theta1_train = np.reshape(nn_params[:hidden_layer_size * (input_layer_size + 1)],\n",
+    "                        (hidden_layer_size, (input_layer_size + 1)))\n",
     "\n",
-    "# Now, costFunction is a function that takes in only one argument\n",
-    "# (the neural network parameters)\n",
-    "res = optimize.minimize(costFunction,\n",
-    "                        initial_nn_params,\n",
-    "                        jac=True,\n",
-    "                        method='TNC',\n",
-    "                        options=options)\n",
-    "\n",
-    "# get the solution of the optimization\n",
-    "nn_params = res.x\n",
-    "        \n",
-    "# Obtain Theta1 and Theta2 back from nn_params\n",
-    "Theta1 = np.reshape(nn_params[:hidden_layer_size * (input_layer_size + 1)],\n",
-    "                    (hidden_layer_size, (input_layer_size + 1)))\n",
-    "\n",
-    "Theta2 = np.reshape(nn_params[(hidden_layer_size * (input_layer_size + 1)):],\n",
-    "                    (num_labels, (hidden_layer_size + 1)))"
+    "    Theta2_train= np.reshape(nn_params[(hidden_layer_size * (input_layer_size + 1)):],\n",
+    "                        (num_labels, (hidden_layer_size + 1)))\n",
+    "    return Theta1_train,Theta2_train,nn_params\n",
+    "    "
    ]
   },
   {
@@ -512,35 +495,60 @@
    "id": "68d058fe",
    "metadata": {},
    "source": [
-    "## Test data with Validation set"
+    "# Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e017ef59",
+   "metadata": {},
+   "source": [
+    "### Calculating optimal hidden units"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2084cb44",
+   "execution_count": 222,
+   "id": "81feed98",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "hiden_units_values=np.array([10,20,40,75, 80,85,90,100,120])\n",
+    "train_error = np.zeros(hiden_units_values.size)\n",
+    "val_error =np.zeros(hiden_units_values.size)\n",
+    "step_units_input = 50\n",
+    "lambda_in = 1\n",
+    "for i in range(hiden_units_values.size):\n",
+    "    \n",
+    "    theta1,theta2,initial_nn_params = neuralNetwork(step_units_input,lambda_in,hiden_units_values[i])\n",
+    "    train_error[i],_=nnCostFunction(initial_nn_params,input_layer_size,hiden_units_values[i],num_labels,Xtrain,ytrain)\n",
+    "    val_error[i],_=nnCostFunction(initial_nn_params,input_layer_size,hiden_units_values[i],num_labels,Xval,yval)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "39a72950",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Set Accuracy: 75.919044\n"
+      "[0.35917733 0.34585221 0.3458451  0.33555055 0.34228337 0.33554765\n",
+      " 0.34920861]\n",
+      "[0.36487608 0.34942707 0.3494849  0.33663762 0.3458197  0.33727962\n",
+      " 0.35422483]\n"
      ]
     }
    ],
    "source": [
-    "pred = utils.predict(Theta1, Theta2, Xval)\n",
-    "print('Training Set Accuracy: %f' % (np.mean(pred == y) * 100))"
+    "print(train_error)\n",
+    "print(val_error)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "411bd1c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -559,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
